@@ -12,6 +12,11 @@ For editing language files in The Conquerors, I recommend [url=http://aok.heaven
 [b]Version History[/b]
 Guide makers et cetera, please include the version into which your guide was written.
 
+Version [b]2015.8.20[/b]:
+-Load PNG into 32-bit SLP frame.
+-Ability to save SLP graphics as SLP or PNG.
+-Play WAV files directly from sounds tab (HD only).
+
 Version [b]2015.8.16[/b]:
 -Ability to load and show 32-bit HD SLP graphics.
 -Rotate palette view from player color copy button.
